chore(style): enforce static imports for test frameworks via Checkstyle