@@ -2,7 +2,6 @@ package org.barcelonajug.superherobattlearena.adapter.out.persistence;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.barcelonajug.superherobattlearena.adapter.out.persistence.mapper.SuperheroMapper;
 import org.barcelonajug.superherobattlearena.adapter.out.persistence.repository.SpringDataSuperheroRepository;
@@ -26,14 +25,14 @@ public class SuperheroPersistenceAdapter implements SuperheroRepositoryPort {
     public List<Hero> findAll() {
         return repository.findAll().stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Hero> findAll(int page, int size) {
         return repository.findAll(PageRequest.of(page, size)).stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -45,14 +44,14 @@ public class SuperheroPersistenceAdapter implements SuperheroRepositoryPort {
     public List<Hero> findByIds(List<Integer> ids) {
         return repository.findAllById(ids).stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Hero> searchByName(String term) {
         return repository.searchByName(term).stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -60,15 +59,15 @@ public class SuperheroPersistenceAdapter implements SuperheroRepositoryPort {
         if (alignment != null && publisher != null) {
             return repository.findByAlignmentAndPublisher(alignment, publisher).stream()
                     .map(mapper::toDomain)
-                    .collect(Collectors.toList());
+                    .toList();
         } else if (alignment != null) {
             return repository.findByAlignment(alignment).stream()
                     .map(mapper::toDomain)
-                    .collect(Collectors.toList());
+                    .toList();
         } else if (publisher != null) {
             return repository.findByPublisher(publisher).stream()
                     .map(mapper::toDomain)
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             return findAll();
         }
